# ONScripter-Jh-cmake

./: CMakeLists.txt  README.md  sdl2_cmake_changes
oldmakefile/: Makefile.Win  Makefile.onscripter
src/: ONScripter.cpp  ONScripter.h  ONScripter_command.cpp  ONScripter_event.cpp  ScriptHandler.cpp  ScriptHandler.h  ScriptParser.cpp  ScriptParser.h  onscripter_main.cpp  sarconv.cpp  sardec.cpp
